# cmake-use-demo

./: .gitignore  README
add_custom_command_use/: CMakeLists.txt
add_library_IMPORTED/: CMakeLists.txt  README  main.cc
build_output/: CMakeLists.txt  README  main.cc  src.cc
build_output/cmake/: utils.cmake
build_output/s1/: CMakeLists.txt
call_add_subdirectory/: CMakeLists.txt  README  main.cc
call_add_subdirectory/mylib/: CMakeLists.txt  mylib.cc  mylib.h
call_add_subdirectory/wrapper_lib/: CMakeLists.txt  wrapper_mylib.cc  wrapper_mylib.h
cmake_function/: CMakeLists.txt  main.cc
cmake_function/cmake/: func.cmake
cmake_function/lib1/: addFunc.cc  addFunc.h
cmake_function/lib2/: subFunc.cc  subFunc.h
compile_option/: CMakeLists.txt  README  main.cc
find_libray_demo/: CMakeLists.txt  main.cc
find_libray_demo/include/: mylibFunc.h
find_libray_demo/mylib/: CMakeLists.txt  mylibFunc.cc
find_libray_demo/use_find_library/: CMakeLists.txt  main.cc
generator-exp/: README
include_directories/: CMakeLists.txt
include_directories/src/: demo.cc  main.cc
install_export_pkg/: CMakeLists.txt  main.cc
install_export_pkg/myLib/: CMakeLists.txt  g.h  myLib  myLib.cc
install_export_pkg/myLibEx/: CMakeLists.txt  demo.cc
module_use/: CMakeLists.txt  main.cc
module_use/cmake/: demo_cmake.cmake
mylib_gen/: Makefile  build_lib.sh  mylib.cc  mylib.h
plugin_demo/: CMakeLists.txt  main.cpp
plugin_demo/demoLib/: CMakeLists.txt  myImpl.cxx  myInterface.h
step0/: CMakeLists.txt  config.h.in  hello-world.cxx
step1/: CMakeLists.txt  main.cc
step1/common/: callOne.cc  callOne.h
step10_2/: CMakeLists.txt
step10_2/mylib/: CMakeLists.txt  mysqrt.h
step10_3/: CMakeLists.txt  main.cc
step10_3/mylib/: CMakeLists.txt  demo.sh
step11_1/: CMakeLists.txt  README
step11_1/mylib/: CMakeLists.txt  mysqrt.cc
step11_1/use_lib/: CMakeLists.txt  main.cc
step11_2/: CMakeLists.txt  config.cmake.in
step11_2/mylib/: CMakeLists.txt  gg.h
step2/: CMakeLists.txt  main.cpp
step2/mylib/: CMakeLists.txt  demoLib.cxx  demoLib.h
step2_2/: CMakeLists.txt
step2_2/mylib/: CMakeLists.txt  myFunc.h
step2_3/mylib/: CMakeLists.txt  myFunc.cc
step3_2/: CMakeLists.txt
step3_2/mylib/: CMakeLists.txt  mysqrt.cc
step5_2/mylib/: CMakeLists.txt
step9_2/: CMakeLists.txt
step9_2/mylib/: CMakeLists.txt  MakeTable.cxx  gen_sqrt.cmake
target-sources-demo/: CMakeLists.txt  README  main.cc  other_src.cc
target-sources-demo/src/: demo.cc
use_configure_file/: CMakeLists.txt  README  namespace.h  namespace.h.in  src.cc  src.h  src.h.in  test_demo.h.in
use_export_pkg/: CMakeLists.txt  main.cc
